fix: bug on mobile header and improve transition of the sidebar

--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -288,6 +288,20 @@ Narbar minifier
   display: none;
 }
 
+.navbar-vertical.navbar-expand-lg {
+  .sidebar-header {
+    .theme-mode {
+      display: none;
+    }
+
+    .navbar-brand {
+      .navbar-brand-image-small {
+        display: none;
+      }
+    }
+  }
+}
+
 @include media-breakpoint-up(lg) {
   .navbar-minifier {
     display: block;
@@ -308,15 +322,20 @@ Narbar minifier
   }
 
   .navbar-vertical.navbar-expand-lg {
+
+    &.collapse {
+      transition: ease .2s;
+    }
+
     .sidebar-header {
       display: flex;
       justify-content: space-around;
       align-items: center;
+    }
 
-      .navbar-brand {
-        .navbar-brand-image-small {
-          display: none;
-        }
+    .sidebar-header {
+      .theme-mode {
+        display: block;
       }
     }
   }
